winningNumbers의 toList 에서 collect(Collection.toList)로 변경